--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+dj-database-url==0.5.0
 Django==2.2.1
 django-rest==0.0.1
+djangorestframework==3.9.4
+psycopg2==2.7.7
 psycopg2-binary==2.8.2
 pytz==2019.1
 sqlparse==0.3.0
