--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-allauth==0.39.1
 django-rest==0.0.1
 django-rest-auth==0.9.5
 djangorestframework==3.9.4
+django-rest-swagger==2.2.0
 idna==2.8
 oauthlib==3.0.1
 psycopg2==2.7.7
